Fix title align

--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ footer {
   font-size: 235%;
   margin-bottom: 0.3em;
   line-height: 1em;
+  text-align: left;
 }
 
 #post h2 {
